--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Reset Code */
 * {
   margin: 0;
   padding: 0;
@@ -212,10 +211,8 @@ h1 {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  max-width: 400px; /* Adjust as needed */
+  max-width: 400px;
   margin: 0 auto;
-  /* overflow: hidden;  */
-
 }
 
 .weather-details h2 {
