--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin: 15px 0 20px 0;
 }
 
 .search-container input[type="text"] {
